fix: fix Image type

--- a/tp1/ex4.ipynb
+++ b/tp1/ex4.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def horizontal_join_images(left_image: Image, right_image: Image) -> Image:\n",
+    "def horizontal_join_images(left_image: Image.Image, right_image: Image.Image) -> Image.Image:\n",
     "    joined = Image.new(mode=\"L\", size=(left_image.width + right_image.width, max(left_image.height, right_image.height)))\n",
     "    joined.paste(left_image, (0, 0))\n",
     "    joined.paste(right_image, (left_image.width, 0))\n",
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def build_image(left_delta: int, right_delta: int) -> Image:\n",
+    "def build_image(left_delta: int, right_delta: int) -> Image.Image:\n",
     "    inside_square_left = Image.new(mode=\"L\", size=PIXEL_SIZE, color=PIXEL_COLOR + left_delta)\n",
     "    inside_square_right = Image.new(mode=\"L\", size=PIXEL_SIZE, color=PIXEL_COLOR + right_delta)\n",
     "\n",
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def show_image(img: Image) -> None:\n",
+    "def show_image(img: Image.Image) -> None:\n",
     "    plt.imshow(img, cmap=\"gray\", vmin=0, vmax=255)"
    ]
   },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
