--- a/tp2/ex2/python-viasampling.ipynb
+++ b/tp2/ex2/python-viasampling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,16 +83,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2af4aabef90>"
+       "<matplotlib.image.AxesImage at 0x20c50768ad0>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -110,7 +110,7 @@
    "source": [
     "m = 2\n",
     "\n",
-    "f1 = np.array(Image.open('assets/barbara.gif').convert('L'))\n",
+    "f1 = np.array(Image.open('../assets/barbara.gif').convert('L'))\n",
     "f1 = f1[:500, :500]\n",
     "\n",
     "plt.figure()\n",
