--- a/tp2/ex2/python-spect.ipynb
+++ b/tp2/ex2/python-spect.ipynb
@@ -174,6 +174,17 @@
     "plt.imshow(np.angle(F), cmap='jet', vmin=-np.pi, vmax=np.pi)\n",
     "plt.colorbar()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lo que se analiza es una simple imágen de un rectangulo vertical blanco en el centro de un cuadrado negro a la cuál se le calcula la FFT y se grafica el modulo y el logaritmo de la misma.\n",
+    "\n",
+    "Para explicar lo que sucede al graficar el espectro del módulo se debe primero recorrer la imágen original de forma horizontal y se puede apreciar un pulso de duración 4 en la zona blanca que si le hacemos la FFT es una sinc. Luego lo recorremos de forma vertical para ver otro pulso ahora de duración 19 por lo que el ancho del lóbulo principal de la sinc será mas angosto en esta dirección.\n",
+    "\n",
+    "Luego se plotea el logaritmo de la FFT para poder conseguir mejor rango dinámico y poder diferenciar aún más los cambios."
+   ]
   }
  ],
  "metadata": {
