style: rename images

--- a/tp2/ex2/python-ex2.ipynb
+++ b/tp2/ex2/python-ex2.ipynb
@@ -225,7 +225,7 @@
    "outputs": [],
    "source": [
     "h1_image = Image.fromarray(h1)\n",
-    "h1_image.save(f\"{OUTPUT_FOLDER_PATH}/unsharp.gif\")"
+    "h1_image.save(f\"{OUTPUT_FOLDER_PATH}/python-ex2-unsharp.gif\")"
    ]
   },
   {
@@ -235,7 +235,7 @@
    "outputs": [],
    "source": [
     "h2_image = Image.fromarray(h2, mode=\"L\")\n",
-    "h2_image.save(f\"{OUTPUT_FOLDER_PATH}/disk.gif\")"
+    "h2_image.save(f\"{OUTPUT_FOLDER_PATH}/python-ex2-disk.gif\")"
    ]
   }
  ],
