style: move ex1 to ex1 folder, ex4.2 add title

--- a/tp2/ex1/ex1.ipynb
+++ b/tp2/ex1/ex1.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ejercicio 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -17,8 +24,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ASSETS_FOLDER_PATH = \"./assets\"\n",
-    "OUTPUT_FOLDER_PATH = \"./ex1\""
+    "ASSETS_FOLDER_PATH = \"../assets\"\n",
+    "OUTPUT_FOLDER_PATH = \"./\""
    ]
   },
   {
@@ -540,7 +547,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x761178124ee0>"
+       "<matplotlib.image.AxesImage at 0x79b6c7f18ee0>"
       ]
      },
      "execution_count": 20,
@@ -572,7 +579,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7611781fa0e0>"
+       "<matplotlib.image.AxesImage at 0x79b6c7fe6260>"
       ]
      },
      "execution_count": 21,
