Ex7 final ideas

--- a/tp3/ex7.ipynb
+++ b/tp3/ex7.ipynb
@@ -88,7 +88,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La imagen final_img es una versión reflejada horizontal y verticalmente de la imagen original img."
+    "La imagen final final_img es una versión reflejada y conjugada de la imagen original img. \n",
+    "Específicamente, está invertida espacialmente y tiene los valores de intensidad reflejados en el sentido de conjugado complejo. Esto significa que si observas la imagen final, parecerá una versión \"espejada\" de la imagen original."
    ]
   }
  ],
