--- a/tp4/ex1a.ipynb
+++ b/tp4/ex1a.ipynb
@@ -54,7 +54,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x72acf0762890>"
+       "<matplotlib.image.AxesImage at 0x791cd3f92920>"
       ]
      },
      "execution_count": 5,
@@ -107,7 +107,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x72acf0371c30>"
+       "<matplotlib.image.AxesImage at 0x791cd15a1cc0>"
       ]
      },
      "execution_count": 8,
