feat: HDR more[

--- a/tp4/ex7.ipynb
+++ b/tp4/ex7.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# HDR\n",
+    "HDR lo que hace es tomar fotos a diferente grado de exposición para poder tener un rango de colores más fiel al real. Cuando uno saca una foto hay zonas el brillo se ajusta a un punto de foco generando saturaciones y colores posiblemente no fieles. HDR toma fotos a diferentes grados de exposición, las ajusta para que se alinien los objetos en ellas y luego las combina para formar una imagen con un rango de color más cercano al real."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -96,6 +104,90 @@
     "# Save HDR image.\n",
     "cv2.imwrite(\"hdrDebevec.hdr\", hdrDebevec)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[ WARN:0@0.333] global matrix_expressions.cpp:1333 assign OpenCV/MatExpr: processing of multi-channel arrays might be changed in the future: https://github.com/opencv/opencv/issues/16739\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tonemapDrago = cv2.createTonemapDrago(1.0, 0.7)\n",
+    "ldrDrago = tonemapDrago.process(hdrDebevec)\n",
+    "ldrDrago = 3 * ldrDrago\n",
+    "cv2.imwrite(\"ldr-Drago.jpg\", ldrDrago * 255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Tonemap using Reinhard's method to obtain 24-bit color image\n",
+    "tonemapReinhard = cv2.createTonemapReinhard(1.5, 0,0,0)\n",
+    "ldrReinhard = tonemapReinhard.process(hdrDebevec)\n",
+    "cv2.imwrite(\"ldr-Reinhard.jpg\", ldrReinhard * 255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Tonemap using Mantiuk's method to obtain 24-bit color image\n",
+    "tonemapMantiuk = cv2.createTonemapMantiuk(2.2,0.85, 1.2)\n",
+    "ldrMantiuk = tonemapMantiuk.process(hdrDebevec)\n",
+    "ldrMantiuk = 3 * ldrMantiuk\n",
+    "cv2.imwrite(\"ldr-Mantiuk.jpg\", ldrMantiuk * 255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
