feat: fix informe

--- a/tp_final/Informe.ipynb
+++ b/tp_final/Informe.ipynb
@@ -30,31 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-12-03 22:57:39.612013: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-12-03 22:57:39.613035: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-12-03 22:57:39.615972: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-12-03 22:57:39.623823: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1733277459.636412  920453 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1733277459.639822  920453 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-12-03 22:57:39.653588: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import keras\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from IPython.display import display, Markdown\n",
+    "from IPython.display import display\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Dropout, Flatten\n",
     "from keras.layers import Conv2D, MaxPooling2D\n",
@@ -67,9 +51,7 @@
    "source": [
     "## Modelo\n",
     "\n",
-    "Para el segundo apartado (la identificación del kanji), se entrenó un modelo de Red Convolucional a partir del dataset Kuzushiji-49 que contiene ejemplos de los 46 hiragana estándar y 3 hiragana antigüos manuscritos. Consta, en total, de 270.912 imágenes de 28x28 pixeles separadas en train y test.\n",
-    "\n",
-    "(incluir foto del conjunto de entrenamiento)"
+    "Para el segundo apartado (la identificación del kanji), se entrenó un modelo de Red Convolucional a partir del dataset Kuzushiji-49 que contiene ejemplos de los 46 hiragana estándar y 3 hiragana antigüos manuscritos. Consta, en total, de 270.912 imágenes de 28x28 pixeles separadas en train y test."
    ]
   },
   {
@@ -1033,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1222,16 +1204,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7412c8f0e530>"
+       "<matplotlib.image.AxesImage at 0x7412c99e6680>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1285,16 +1267,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7412c8ffaaa0>"
+       "<matplotlib.image.AxesImage at 0x7412c99c4a60>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1402,16 +1384,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7412c8586140>"
+       "<matplotlib.image.AxesImage at 0x7412d69666e0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1465,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1548,16 +1530,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7412c840a2c0>"
+       "<matplotlib.image.AxesImage at 0x7412c3f83160>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1589,21 +1571,18 @@
    "source": [
     "## Pos-Procesamento de la Salida\n",
     "\n",
-    "Ahora se está en condiciones de predecir cada hiragana. Se obtiene un vector de 49 posiciones. Tomamos la posición con valor más grande de este vector que representa la clase ganadora por hiragana.\n",
-    "\n",
-    "(imagen)"
+    "Ahora se está en condiciones de predecir cada hiragana. Se obtiene un vector de 49 posiciones. Tomamos la posición con valor más grande de este vector que representa la clase ganadora por hiragana."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-12-03 22:57:42.680766: E external/local_xla/xla/stream_executor/cuda/cuda_driver.cc:152] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: UNKNOWN ERROR (303)\n",
       "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
      ]
     }
@@ -1614,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1631,7 +1610,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 65ms/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 49ms/step\n"
      ]
     }
    ],
@@ -1664,14 +1643,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Esta clase se la mapea al carácter unicode del hiragana que representa.\n",
-    "\n",
-    "(imagen)"
+    "Esta clase se la mapea al carácter unicode del hiragana que representa."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1735,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1752,16 +1729,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 21ms/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 24ms/step\n"
      ]
     },
     {
      "data": {
-      "text/markdown": [
-       "### Predicted Hiragana: と"
-      ],
       "text/plain": [
-       "<IPython.core.display.Markdown object>"
+       "'### Predicted Hiragana: と'"
       ]
      },
      "metadata": {},
@@ -1774,7 +1748,7 @@
     "else:\n",
     "    target = sections[1]\n",
     "prediction = predict_hiragana(target, show_plot=True)\n",
-    "display(Markdown('### Predicted Hiragana: {}'.format(class2unicode[prediction])))"
+    "display('### Predicted Hiragana: {}'.format(class2unicode[prediction]))"
    ]
   },
   {
@@ -1786,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1796,18 +1770,15 @@
       "0 ((np.int32(20), np.int32(50)), (np.int32(49), np.int32(87)))\n",
       "1 ((np.int32(18), np.int32(53)), (np.int32(194), np.int32(231)))\n",
       "2 ((np.int32(15), np.int32(53)), (np.int32(343), np.int32(372)))\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 40ms/step\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 25ms/step\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 25ms/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 23ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 21ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 21ms/step\n"
      ]
     },
     {
      "data": {
-      "text/markdown": [
-       "### Predicted Hiragana word: つてと"
-      ],
       "text/plain": [
-       "<IPython.core.display.Markdown object>"
+       "'### Predicted Hiragana word: つてと'"
       ]
      },
      "metadata": {},
@@ -1826,7 +1797,7 @@
     "predictions = [class2unicode[x] for x in map(lambda x: predict_hiragana(sections[x]), selected_row)]\n",
     "\n",
     "predicted_word = \"\".join(predictions)\n",
-    "display(Markdown('### Predicted Hiragana word: {}'.format(predicted_word)))"
+    "display('### Predicted Hiragana word: {}'.format(predicted_word))"
    ]
   }
  ],
