feat: fix informe

--- a/tp_final/Informe.ipynb
+++ b/tp_final/Informe.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "En el idioma japonés, existen 3 abecedarios diferentes: hiragana, katakana y kanji. \n",
     "\n",
-    "El katakana y hiragana son considerados silabarios ya que la fonética de cada uno de los símbolos que los componen consta del sonido de una consonante y luego una vocal. Así, por ejemplo, el símbolo か se pronunca \"ka\".\n",
+    "El katakana y hiragana son considerados silabarios ya que la fonética de cada uno de los símbolos que los componen consta del sonido de una consonante y luego una vocal. Así, por ejemplo, el símbolo か se pronuncia \"ka\".\n",
     "\n",
     "En particular, el katakana suele ser utilizado para palabras extranjeras. Observando la palabra パソコン (\"pasokon\"), la misma está escrita en katakana, siendo un fonetismo de la palabra anglosajona \"Personal Computer\" acortada \"Perso(nal) Comp\". Por otro lado, los kanji son ni más ni menos que símbolos heredados del chino antigüo dotados de un significado en sí. Entonces, 卵 es el kanji para \"huevo\" para dar un ejemplo.\n",
     "\n",
@@ -867,9 +867,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El entrenamiento fue realizado por el término de 350 épocas obteniéndose una accuracy y precision del 78.15% para el conjunto de prueba.\n",
-    "\n",
-    "(incluir foto del accuracy a lo largo de las épocas)"
+    "El entrenamiento fue realizado por el término de 350 épocas obteniéndose una accuracy y precision del 78.15% para el conjunto de prueba."
    ]
   },
   {
@@ -1569,7 +1567,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pos-Procesamento de la Salida\n",
+    "## Pos-Procesamiento de la Salida\n",
     "\n",
     "Ahora se está en condiciones de predecir cada hiragana. Se obtiene un vector de 49 posiciones. Tomamos la posición con valor más grande de este vector que representa la clase ganadora por hiragana."
    ]
